--- a/ParkWardAndroid/app/src/main/res/layout/activity_main.xml
+++ b/ParkWardAndroid/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/Image_Taken"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
         <Button
             android:text="START"
-
+            android:id="@+id/Start_Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
