--- a/ParkWardAndroid/app/src/main/res/layout/activity_main.xml
+++ b/ParkWardAndroid/app/src/main/res/layout/activity_main.xml
@@ -22,13 +22,22 @@
         <ImageView
             android:id="@+id/Image_Taken"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
         <Button
             android:text="START"
             android:id="@+id/Start_Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_above="@id/Configure_Button"
+            />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Configure"
+            android:id="@+id/Configure_Button"
             android:layout_alignParentBottom="true"
+
             />
     </RelativeLayout>
 
